@@ -682,7 +682,7 @@ int main(int argc, char * argv [])
   avrdude_message(MSG_NOTICE, "\n%s: Version %s, compiled on %s at %s\n"
                     "%sCopyright (c) 2000-2005 Brian Dean, http://www.bdmicro.com/\n"
                     "%sCopyright (c) 2007-2014 Joerg Wunsch\n"
-						  "%sCopyright (c) 2014-2018 sarlacii\n\n",
+						  "%sCopyright (c) 2014-2019 sarlacii\n\n",
                     progname, version, __DATE__, __TIME__, progbuf, progbuf);
   avrdude_message(MSG_NOTICE, "%sSystem wide configuration file is \"%s\"\n",
             progbuf, sys_config);
